@@ -17,6 +17,9 @@ We now would like to extend this.
 
 ==2014-07-09==
 * Changed "default" measures, see http://linked-data-cubes.org/index.php/EmbeddedSesameEngine#Default_Measure_Strategies
+* Now NestedLoopJoin does Concat in case all measures are the same.
+* We should make sure that in case all measures are the same, it suffices to have one value
+from either cubes.
 
 ==2014-07-09==
 * Finished refactoring of logical2physical operator plan:
